@@ -1,3 +1,12 @@
+2015-03-12  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [ARM][Linux] GC sometimes stuck in an infinite loop if parallel GC is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=141290
+
+        Reviewed by Carlos Garcia Campos.
+
+        * wtf/Platform.h: Enable parallel GC after r181319.
+
 2015-03-10  Michael Catanzaro  <mcatanzaro@igalia.com>
 
         GCC: CRASH() should be annotated with NORETURN
